# ArtExtract

./: .env.example  .gitignore  ArtExtract_Report.md  CMakeLists.txt  DATA_RIGHTS.md  Dockerfile  README.md  ROADMAP.md  STRATEGY.md  SUBMISSION_CHECKLIST.md  TASKS.md  pyproject.toml  requirements.lock.txt  requirements.txt  requirements_similarity.txt
configs/: baseline.json  baseline.yaml  multispectral_baseline.json  multispectral_baseline.yaml  quick_cpu.json  quick_cpu.yaml  retrieval_baseline.json  retrieval_baseline.yaml
data/: README.md
data/manifests/: train_multitask.csv  train_quick.csv  val_multitask.csv  val_quick.csv
data/templates/: provenance_template.csv
docs/: ARCHITECTURE.md  CLI_REFERENCE.md  DATA_AND_COMPLIANCE.md  DATA_POLICY.md  DEVELOPMENT.md  GETTING_STARTED.md  HIDDEN_RETRIEVAL_OPTIONAL.md  README.md  ROADMAP.md  TRAINING_AND_EVAL.md  TROUBLESHOOTING.md  project_page_improved.md
docs/similarity/: README.md  RUN.md  TROUBLESHOOTING.md
include/artextract/: extractor.h
notebooks/: ArtExtract_Task1_CRNN.ipynb  README.md  Task1_full_tuned_e8_results.executed.ipynb
notebooks/task1/: ArtExtract_Task1_CRNN.executed.html  ArtExtract_Task1_CRNN.executed.ipynb  (+2 more)
reports/: README.md  full_pretrained_e10_report.md  full_tuned_e8_report.md  full_zip_run_progress.md  full_zip_run_report.md  hidden_retrieval_quick_report.md  progress_latest.md  task1_final_perfected_report.md  task1_quick_run_report.md  task1_scaled_run_report.md
scripts/: build_manifest.py  dataset_stats.py  detect_outliers.py  download_images_from_manifest.py  eval.py  evaluate_hidden_retrieval.py  evaluate_model.py  evaluate_predictions.py  filter_redistributable.py  generate_synthetic_multispectral.py  run_hidden_retrieval_pipeline.sh  run_quick_pipeline.sh  run_reconstruction.py  run_similarity.py  train.py  train_crnn.py  train_hidden_retrieval.py
src/: extractor.cpp  main.cpp
task1/: README.md
task2/: README.md
test_results/: README.md
tests/: README.md  test_engineering_fixes.py  test_extractor.cpp  test_multispectral_cli_smoke.py  test_multispectral_contract.py  test_multispectral_model.py  test_similarity_service_layers.py
(+66 files in other folders)
