[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "artextract"
version = "0.1.0"
description = "ArtExtract: Multi-task painting classification and multi-spectral retrieval"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.24.0",
    "Pillow>=9.0.0",
    "PyYAML>=6.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "pandas>=2.0.0",
    "tqdm>=4.65.0",
    "open-clip-torch>=2.20.0",
    "faiss-cpu>=1.7.4"
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["artextract*"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
